[package]
name = "lcu-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0"
lazy_static = "1.4.0"
regex = "1.7.0"
serde = {version = "1.0.152", features = ['derive'] }
serde_json = "1.0.91"
reqwest = {version = "0.11.13", features = ['blocking'] }